namespace NotApplied;

public interface IMenu
{
    List<IMenuItem> MenuItems { get; }
}