---
title: Without Decorator Pattern
---

classDiagram
	MenuItem o-- IMenu
  IMenu <|-- Menu
	IMenu <|-- DiscountMenu
	Menu <|-- ChristmasMenu
	DiscountMenu <|-- ChristmasMenuWithDiscount


  class MenuItem{
    + string name
    + double price
  }

  class IMenu{
    + List~MenuItem~ MenuItems
  }

  class Menu{
  }

  class DiscountMenu{
    + double discountRate
  }

  class ChristmasMenu{
  }

  class ChristmasMenuWithDiscount{
    + double discountRate
  }